WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218380
Align GBK and gb18030 encoder and decoder with specification and other browsers
https://bugs.webkit.org/show_bug.cgi?id=218380
Summary
Align GBK and gb18030 encoder and decoder with specification and other browsers
Anne van Kesteren
Reported
2020-10-30 04:21:44 PDT
This does not result in an error currently it seems. See step 3 of
https://encoding.spec.whatwg.org/#gb18030-encoder
.
https://github.com/web-platform-tests/wpt/pull/26317
will soon have an additional test for this.
Attachments
Patch
(260.94 KB, patch)
2020-11-02 23:50 PST
,
Alex Christensen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(260.93 KB, patch)
2020-11-02 23:53 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(264.00 KB, patch)
2020-11-03 08:49 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(269.54 KB, patch)
2020-11-04 14:48 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-10-31 10:05:43 PDT
<
rdar://problem/70917044
>
Smoley
Comment 2
2020-10-31 10:07:10 PDT
Thanks for filing, if you have any other info to make this more actionable like a test case and steps to reproduce the issue (or lack of error in this case) please add it here.
Chris Dumez
Comment 3
2020-10-31 10:14:41 PDT
(In reply to Smoley from
comment #2
)
> Thanks for filing, if you have any other info to make this more actionable > like a test case and steps to reproduce the issue (or lack of error in this > case) please add it here.
Well, Anne provided the tests in the bug description:
https://github.com/web-platform-tests/wpt/pull/26317
Alex Christensen
Comment 4
2020-11-02 23:50:17 PST
Created
attachment 413008
[details]
Patch
EWS Watchlist
Comment 5
2020-11-02 23:51:19 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Alex Christensen
Comment 6
2020-11-02 23:53:18 PST
Created
attachment 413009
[details]
Patch
Yusuke Suzuki
Comment 7
2020-11-03 01:59:50 PST
Nice! Do you think we should file a bug to ICU about this encoding?
Alex Christensen
Comment 8
2020-11-03 08:49:26 PST
Created
attachment 413064
[details]
Patch
Alex Christensen
Comment 9
2020-11-03 09:27:22 PST
(In reply to Yusuke Suzuki from
comment #7
)
> Nice! Do you think we should file a bug to ICU about this encoding?
This is one of many encodings where ICU differs from all browsers. I'm planning to give them a report.
Alex Christensen
Comment 10
2020-11-03 10:12:10 PST
The tests I wrote have been submitted in a PR to wpt
https://github.com/web-platform-tests/wpt/pull/26385
David Kilzer (:ddkilzer)
Comment 11
2020-11-04 10:59:36 PST
Comment on
attachment 413064
[details]
Patch r=me. Please file bug reports for issues found in ICU, too.
Alex Christensen
Comment 12
2020-11-04 14:48:40 PST
Created
attachment 413210
[details]
Patch
David Kilzer (:ddkilzer)
Comment 13
2020-11-04 15:08:49 PST
(In reply to Alex Christensen from
comment #12
)
> Created
attachment 413210
[details]
> Patch
What changed?
Alex Christensen
Comment 14
2020-11-04 15:09:39 PST
I added another test showing the GBK decoding differences with Chromium.
EWS
Comment 15
2020-11-05 18:02:45 PST
Committed
r269499
: <
https://trac.webkit.org/changeset/269499
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413210
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug