Align GBK and gb18030 encoder and decoder with specification and other browsers https://bugs.webkit.org/show_bug.cgi?id=218380

Patch by Alex Christensen <achristensen@webkit.org> on 2020-11-05
Reviewed by David Kilzer.

LayoutTests/imported/w3c:

* web-platform-tests/encoding/gb18030-encoder-expected.txt: Removed.
* web-platform-tests/encoding/gb18030-encoder.html: Removed.
* web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder-expected.txt: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder.html: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-encoder-expected.txt: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-encoder.html: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gb18030/resources/ranges.js: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gbk/gbk-encoder-expected.txt: Renamed from LayoutTests/imported/w3c/web-platform-tests/encoding/gbk-encoder-expected.txt.
* web-platform-tests/encoding/legacy-mb-schinese/gbk/gbk-encoder.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/encoding/gbk-encoder.html.
* web-platform-tests/encoding/legacy-mb-schinese/gbk/gbk-decoder-expected.txt: Added.
* web-platform-tests/encoding/legacy-mb-schinese/gbk/gbk-decoder.html: Added.

Source/WebCore:

We had been limping along using ICU with some post-processing to encode and decode legacy-encoded Simplified Chinese text,
but I implemented the standard with tests and compared behavior with other browsers.  A few characters and several of the ranges
from https://encoding.spec.whatwg.org/index-gb18030-ranges.txt were missing from our copy of ICU's encoding tables.

I derive the encoding table from ICU's with one correction, then assert that it is equal to a reference copy of the table.
This keeps a release build of WebKit small.

Firefox's GBK decoder accepts anything that a gb18030 encoder would generate, which makes it more permissive than Chrome's,
but the spec says to be this permissive so we will, and we will have sites that currently work only in Firefox also work in WebKit.
See https://encoding.spec.whatwg.org/#gbk-decoder

Also, Chrome and WebKit before this change do not implement https://encoding.spec.whatwg.org/#gb18030-decoder step 7, which decodes 0x80
into U+20AC, the Euro sign.

No comprehensive tests had been written, so I wrote such tests to cover each failure mode and each range.  Existing tests covered the differences
between GBK and gb18030 encoding and some of the code points from https://encoding.spec.whatwg.org/index-gb18030.txt .  Comparison with ICU revealed
exactly one difference between ICU's decoder and Firefox's implementation, which was that a pointer of 6555 should map to a code point of U+e5e5,
so I added that code point to the unit tests.  Because that was the only difference between ICU and the whatwg standard, I felt it would have been
overkill to test each of the 23940 code points, but I did move the Simplified Chinese legacy encoding tests to their own directory like Traditional
Chinese, Korean, and Japanese.

Tests: imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-decoder.html
       imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gb18030/gb18030-encoder.html
       imported/w3c/web-platform-tests/encoding/legacy-mb-schinese/gbk/gbk-encoder.html

* platform/text/EncodingTables.cpp:
(WebCore::gb18030):
* platform/text/EncodingTables.h:
(WebCore::CompareSecond::operator()):
(WebCore::makeSecondAdapter):
* platform/text/TextCodecCJK.cpp:
(WebCore::TextCodecCJK::registerEncodingNames):
(WebCore::TextCodecCJK::registerCodecs):
(WebCore::eucJPEncode):
(WebCore::iso2022JPEncode):
(WebCore::shiftJISEncode):
(WebCore::eucKREncode):
(WebCore::big5Encode):
(WebCore::gb18030Ranges):
(WebCore::gb18030RangesCodePoint):
(WebCore::gb18030RangesPointer):
(WebCore::gb18030EncodeIndex):
(WebCore::TextCodecCJK::gb18030Decode):
(WebCore::gbEncodeShared):
(WebCore::gb18030Encode):
(WebCore::TextCodecCJK::gbkDecode):
(WebCore::gbkEncode):
(WebCore::TextCodecCJK::decode):
(WebCore::TextCodecCJK::encode const):
* platform/text/TextCodecCJK.h:
* platform/text/TextCodecICU.cpp:
(WebCore::TextCodecICU::createICUConverter const):
(WebCore::TextCodecICU::decode):
(WebCore::TextCodecICU::encode const):
(WebCore::fallbackForGBK): Deleted.
(WebCore::gbkCallbackEscape): Deleted.
(WebCore::gbkUrlEscapedEntityCallack): Deleted.
(WebCore::gbkCallbackSubstitute): Deleted.
* platform/text/TextCodecICU.h:

LayoutTests:

* fast/encoding/char-encoding-expected.txt:
* fast/encoding/char-encoding.html:

Canonical link: https://commits.webkit.org/231299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269499 268f45cc-cd09-0410-ab3c-d52691b4dbfc