Source/WebCore/platform/text/TextCodecCJK.h
@@ -50,6 +50,8 @@ private:
     String shiftJISDecode(const uint8_t*, size_t, bool, bool, bool&);
     String eucKRDecode(const uint8_t*, size_t, bool, bool, bool&);
     String big5Decode(const uint8_t*, size_t, bool, bool, bool&);
+    String gbkDecode(const uint8_t*, size_t, bool, bool, bool&);
+    String gb18030Decode(const uint8_t*, size_t, bool, bool, bool&);
 
     const Encoding m_encoding;
 
@@ -60,6 +62,10 @@ private:
     ISO2022JPDecoderState m_iso2022JPDecoderOutputState { ISO2022JPDecoderState::ASCII };
     bool m_iso2022JPOutput { false };
     Optional<uint8_t> m_iso2022JPSecondPrependedByte;
+
+    uint8_t m_gb18030First { 0x00 };
+    uint8_t m_gb18030Second { 0x00 };
+    uint8_t m_gb18030Third { 0x00 };
 
     uint8_t m_lead { 0x00 };
     Optional<uint8_t> m_prependedByte;
